--- a/src/styles.css
+++ b/src/styles.css
@@ -77,7 +77,7 @@ p {
 }
 
 ul {
-    text-align: left;
+    text-align: center;
     list-style-type: none;
     padding: 0;
 }
@@ -86,6 +86,7 @@ li {
     font-family: 'Nunito', sans-serif;
     display: inline-block;
     margin: 20px;
+    text-align: center;
 }
 
 .section_other_users {
@@ -136,18 +137,28 @@ p {
 }
 
 .fa-users {
-    width: 2%;
-    height: 2%;
+    width: 3%;
+    height: 3%;
 
 }
 
 #ui-datepicker-div {
-    display: none;
     background-color: white;
+    display: none;
+    flex-flow: column;  
 }
 
-#ui-datepicker-calednar {
-    padding: 2%;
+.ui-datepicker-title, .ui-datepicker-header {
+    border: none;
+}
+
+span.ui-icon {
+    margin: 2px;
+}
+
+span.ui-icon:hover {
+    color: blue;
+    cursor: pointer;
 }
 
 .div_chart{
